--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,169 @@
 /* You can add global styles to this file, and also import other style files */
+
+//List variables for scss
+@import "~src/app/shares/scss/variables";
+
+
+
+//--------Custom Header---------//
+.navbar {
+    background-color: $bluePurpleColor;
+    
+    .active {
+        font-weight: bold;
+    }
+    a {
+        color: $whileColor;
+
+        &.nav-link {
+            color: $whileColor;
+        }
+    }
+    .logo{
+       width: 50px;
+    }
+    .icon-language{
+        font-size: 30px;
+        color: $whileColor;
+        float: left;
+        margin: 5px 10px;
+    }
+    .form-control{
+        width: auto;
+    }
+}
+
+
+
+
+//--------Congfig Element Global---------//
+a {
+    text-decoration: none;
+}
+.body {
+    padding: 30px 0px;
+    background-color: $greyColor;
+    min-height: calc(100vh - 76px);
+}
+
+
+
+
+
+//--------Custom modal bootstrap---------//
+.modal-content {
+    border-radius: 0.5rem;
+
+    .modal-header {
+        color: $whileColor;
+
+        button.close {
+            outline: 0;
+            color: $whileColor;
+        }
+    }
+}
+
+
+
+//--------Block Golobal---------//
+.content-block-default {
+    margin-top: 30px;
+    background-color: $whileColor;
+    border-radius: 5px;
+    padding: 15px;
+    box-shadow: 0 1px 7px 1px #ededed;
+
+    .title {
+        padding: 5px 0px;
+        font-size: 20px;
+        font-weight: bold;
+        color: $dangerColor;
+    }
+
+    .body-block {
+        padding: 15px;
+
+        input.search {
+            width: 320px;
+            max-width: 100%;
+            margin: 10px 0px;
+        }
+
+      
+    }
+}
+
+
+
+//--------Table---------//
+.table {
+    color: $balckGreyColor;
+
+    thead{
+        th{
+            font-size: 14px;
+        }
+    }
+    tbody tr {
+        &:nth-child(2n) {
+            background-color: #fff6f7;
+        }
+        th{
+            font-size: 14px;
+        }
+        .item-action {
+            font-weight: bold;
+            cursor: pointer;
+            transition: .2s transform, 0.5s color ;
+
+            &:hover{
+                transform: scale(1.1);
+                color: #dc3545;
+            }
+        }
+    }
+
+    .page-redirect {
+        display: table;
+        margin: 0 auto;
+        padding: 5px 0px;
+
+        .item {
+            display: inline-block;
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+            line-height: 30px;
+            text-align: center;
+            color: $dangerColor;
+            margin: 0px 5px;
+            cursor: pointer;
+            transition: background-color 1s;
+
+            &.active,
+            &:hover {
+                background-color: $dangerColor;
+                color: $whileColor;
+                font-weight: bold;
+            }
+            &.disable {
+                background-color: rgba(240, 248, 255, 0);
+                color: $greyColor;
+                cursor: auto;
+            }
+        }
+    }
+}
+
+
+//--------Animate Global---------//
+@keyframes FadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
