Fix bug header version mobi

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,6 +22,9 @@
     .logo{
        width: 50px;
     }
+    .navbar-toggler-icon{
+        color: #f9f9f9;
+    }
     .icon-language{
         font-size: 30px;
         color: $whileColor;
