--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
       <ul class="navbar-nav mr-auto">
         <!-- [ngClass]="{'active' : infoModuleActive?.title == 'Manager Vehicle'}" -->
         <li class="nav-item active">
-          <a class="nav-link" [routerLink]="['vehicle/list']">Todo <span class="sr-only">(current)</span></a>
+          <a class="nav-link" [routerLink]="['todo/list']">Todo <span class="sr-only">(current)</span></a>
         </li>
       </ul>
       <div class="my-2 my-lg-0">
