--- a/src/styles.scss
+++ b/src/styles.scss
@@ -116,6 +116,9 @@ a {
             font-size: 14px;
         }
         .item-action {
+            display: inline-block;
+            width: 25px;
+            height: 25px;
             font-weight: bold;
             cursor: pointer;
             transition: .2s transform, 0.5s color ;
