--- a/src/app/modules/todo/components/list-todo/list-todo.component.html
+++ b/src/app/modules/todo/components/list-todo/list-todo.component.html
@@ -1,72 +1,106 @@
-<div class="row">
-    <div class="col-12 col-md-6">
-        <label>Title</label>
-        <input class="form-control search" [(ngModel)]="currentTodo.title" placeholder="Title ...">
+<div class="content-block-default">
+    <div class="title">
+        {{ 'todoPage.block.formTodo.title' | translate: ({ typeForm: currentAction === "ADD" ? 'add' : 'edit', dumbTrigger: currentLang } | ParamsTranslate) }}
     </div>
-    <div class="col-12 col-md-6">
-        <label>Content</label>
-        <input class="form-control search" [(ngModel)]="currentTodo.content" placeholder="Content ...">
-    </div>
-    <div class="col-12 col-md-6">
-        <label>Creator</label>
-        <input class="form-control search" [(ngModel)]="currentTodo.creator" placeholder="Creator ...">
-    </div>
-    <div class="col-12 col-md-6">
-        <label>Completed</label>
-        <input class="form-control search" type="checkbox" [(ngModel)]="currentTodo.completed">
-    </div>
+    <form novalidate [formGroup]="todoForm" (ngSubmit)="submit()" class="row justify-content-md-center">
+        <div class="col-12 col-md-6 mt-2">
+            <label class="label"> {{ 'todoPage.block.formTodo.labelTitle' | translate }}</label>
+            <input class="form-control search" formControlName="title"
+                placeholder="{{ 'todoPage.block.formTodo.placeTitle' | translate }}">
+            <div class="col alert alert-danger mt-1" role="alert"
+                *ngIf="todoForm.get('title')?.errors?.required && todoForm.get('title')?.touched">
+                {{ 'todoPage.block.formTodo.messErrorRequiredTitle' | translate }}
+            </div>
+            <div class="col alert alert-danger mt-1" role="alert"
+                *ngIf="todoForm.get('title')?.hasError('titleExist') && todoForm.get('title')?.touched">
+                {{ 'todoPage.block.formTodo.messErrorExistTitle' | translate }}
+            </div>
+        </div>
+        <div class="col-12 col-md-6 mt-2">
+            <label class="label">{{ 'todoPage.block.formTodo.labelContent' | translate }}</label>
+            <input class="form-control search" formControlName="content"
+                placeholder="{{ 'todoPage.block.formTodo.placeContent' | translate }}">
+            <div class="col alert alert-danger mt-1" role="alert"
+                *ngIf="todoForm.get('content')?.errors?.required && todoForm.get('content')?.touched">
+                {{ 'todoPage.block.formTodo.messErrorRequiredContent' | translate }}
+            </div>
+        </div>
+        <div class="col-12 col-md-6 mt-2">
+            <label class="label">{{ 'todoPage.block.formTodo.labelCreator' | translate }}</label>
+            <input class="form-control search" formControlName="creator"
+                placeholder="{{ 'todoPage.block.formTodo.placeCreator' | translate }}">
+            <div class="col alert alert-danger mt-1" role="alert"
+                *ngIf="todoForm.get('creator')?.errors?.required && todoForm.get('creator')?.touched">
+                {{ 'todoPage.block.formTodo.messErrorRequiredCreator' | translate }}
+            </div>
+        </div>
+        <div class="col-12 col-md-6 mt-2">
+            <label class="label">{{ 'todoPage.block.formTodo.labelCompleted' | translate }}</label>
+            <input class="form-control search" formControlName="completed" type="checkbox">
+        </div>
+        <div class="row mt-3">
+            <div class="col-12">
+                <button class="btn btn-primary mr-1" type="button" (click)="addTodo()">{{ 'add' | translate }}</button>
+                <button [disabled]="todoForm.invalid || todoForm.pending" class="btn btn-success ml-1"
+                    type="submit">{{ 'submit' | translate }}</button>
+            </div>
+        </div>
+    </form>
 </div>
 
 
-
-<button (click)="addTodo()">add</button>
-<button (click)="submit()">submit</button>
-
 <div class="content-block-default">
     <div class="title">
-        List Vehicle
+        {{ 'todoPage.block.table.title' | translate }}
     </div>
     <div class="body-block">
-        <form novalidate  [formGroup]="searchFrom" class="row justify-content-md-center">
+        <form novalidate [formGroup]="searchForm" class="row justify-content-md-center">
             <div class="col-12 col-md-6">
-                <input class="form-control search" formControlName="title" placeholder="Title ...">
+                <input class="form-control search" formControlName="title"
+                    placeholder="{{ 'todoPage.block.formTodo.placeTitle' | translate }}">
             </div>
             <div class="col-12 col-md-6">
-                <input class="form-control search" formControlName="content" placeholder="Content ...">
+                <input class="form-control search" formControlName="content"
+                    placeholder="{{ 'todoPage.block.formTodo.placeContent' | translate }}">
             </div>
             <div class="col-12 col-md-6">
-                <input class="form-control search" formControlName="creator" placeholder="Creator ...">
+                <input class="form-control search" formControlName="creator"
+                    placeholder="{{ 'todoPage.block.formTodo.placeCreator' | translate }}">
             </div>
             <div class="col-12 col-md-6">
                 <input class="form-control search" formControlName="completed" type="checkbox">
             </div>
-            <button type="submit">search</button>
         </form>
         <div class="table">
             <table class="table">
                 <thead>
                     <tr>
-                        <th>title</th>
-                        <th>content</th>
-                        <th>creator</th>
-                        <th>completed</th>
+                        <th>{{ 'todoPage.block.table.rowTitle' | translate }}</th>
+                        <th>{{ 'todoPage.block.table.rowlContent' | translate }} </th>
+                        <th>{{ 'todoPage.block.table.rowlCreator' | translate }}</th>
+                        <th>{{ 'todoPage.block.table.rowlCompleted' | translate }} </th>
                         <th></th>
                     </tr>
                 </thead>
                 <tbody>
                     <ng-container *ngFor="let itemTodo of listTodo$ | async ; trackBy: trackByFn">
                         <tr>
-                            <td>{{itemTodo.title}}</td>
+                            <td>
+                                {{itemTodo.title}}
+                                <i *ngIf="itemTodo.id === this.todoForm?.value.id" class="fa fa-spinner fa-spin fa-fw margin-bottom"></i>
+                            </td>
                             <td>{{itemTodo.content}}</td>
                             <td>{{itemTodo.creator}}</td>
                             <td>
                                 <i *ngIf="itemTodo.completed" class="fa fa-check" aria-hidden="true"></i>
                             </td>
                             <td class="text-center">
-                                <div class="item-action" title="Detail" (click)=getInfoTodo(itemTodo.id)>
+                                <div title="{{ 'todoPage.block.table.tooltipEdit' | translate }}" class="item-action"
+                                    title="Detail" (click)=getInfoTodo(itemTodo.id)>
                                     <i class="fa fa-pencil" aria-hidden="true"></i>
                                 </div>
-                                <div class="item-action" title="Detail" (click)=deleteTodo(itemTodo.id)>
+                                <div title="{{ 'todoPage.block.table.tooltipDelete' | translate }}" class="item-action"
+                                    title="Detail" (click)=deleteTodo(itemTodo.id)>
                                     <i class="fa fa-trash-o" aria-hidden="true"></i>
                                 </div>
                             </td>
