Update icon and dialog and layout material

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,20 @@
 <mat-toolbar class="header">
   <mat-toolbar-row class="space-between">
-    <div>
+    <mat-toolbar-row>
       <a [routerLink]="['/']"><img src="../assets/img/icon-angular.png" style="width:50px;"></a>
       <a mat-button [routerLink]="['todo/list']">Todo</a>
-    </div>
-    <div class="float-right">
-      <mat-form-field class="input-big" appearance="fill">
-        <mat-label> <i class="icon-language fa fa-globe" aria-hidden="true"></i> {{ 'language' | translate }}</mat-label>
-        <mat-select  [(ngModel)]="languageCurrent"  (selectionChange)="switchLanguage($event)">
-          <mat-option [value]="'en'">
-            {{ 'english' | translate }}
-          </mat-option>
-          <mat-option [value]="'vi'">
-            {{ 'vienamese' | translate }}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-    </div>
+    </mat-toolbar-row>
+    <mat-form-field class="input-big" appearance="fill">
+      <mat-label> <span style="font-size: 14px" class="material-icons">language</span>{{ 'language' | translate }}</mat-label>
+      <mat-select  [(ngModel)]="languageCurrent"  (selectionChange)="switchLanguage($event)">
+        <mat-option [value]="'en'">
+          {{ 'english' | translate }}
+        </mat-option>
+        <mat-option [value]="'vi'">
+          {{ 'vienamese' | translate }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
   </mat-toolbar-row>
 </mat-toolbar>
 
