--- a/src/app/modules/todo/components/form-todo/form-todo.component.html
+++ b/src/app/modules/todo/components/form-todo/form-todo.component.html
@@ -33,9 +33,6 @@
     </table>
 
     <p>
-        <mat-checkbox *ngIf="data.todoForm.get('completed')" formControlName="completed" class="example-margin">
-            {{ 'todoPage.block.formTodo.labelCompleted' | translate }}
-        </mat-checkbox>
         <mat-form-field class="example-full-width">
             <mat-label>{{ 'todoPage.block.formTodo.labelContent' | translate }}</mat-label>
             <textarea matInput formControlName="content"></textarea>
@@ -43,11 +40,15 @@
                 {{ 'todoPage.block.formTodo.messErrorRequiredContent' | translate }}
             </mat-error>
         </mat-form-field>
-
+        <mat-checkbox *ngIf="data.todoForm.get('completed')" formControlName="completed" class="example-margin">
+            {{ 'todoPage.block.formTodo.labelCompleted' | translate }}
+        </mat-checkbox>
     </p>
 
     <mat-dialog-actions align="end">
         <button mat-button type="button" (click)="cancel()">{{ 'cancel' | translate }}</button>
-        <button mat-button type="submit" color="primary"> <i class="fa fa-check" aria-hidden="true"></i> {{ 'submit' | translate }}</button>
+        <button mat-button type="submit" color="primary"> 
+            <span class="material-icons">done</span> {{ 'submit' | translate }}
+        </button>
     </mat-dialog-actions>
 </form>
