update: info my project package

--- a/src/app/modules/pages/components/home/home.component.html
+++ b/src/app/modules/pages/components/home/home.component.html
@@ -33,7 +33,8 @@
         </h4>
         <ul>
             <li>@ng-bootstrap/ng-bootstrap - {{'version' | translate}} ^6.1.0</li>
-            <li>bootstrap - {{'version' | translate}} 6.1.0 </li>
+            <li>@datorama/akita - {{'version' | translate}} ^5.2.1 </li>
+            <li>@angular/material - {{'version' | translate}} ^10.1.2 </li>
             <li>rxjs - {{'version' | translate}} 6.5.5</li>
             <li>typescript - {{'version' | translate}} 3.9.5</li>
         </ul>
