--- a/src/styles.scss
+++ b/src/styles.scss
@@ -70,9 +70,11 @@ a {
     justify-content: space-between;
 }
 .material-icons{
-    font-size: unset;
+    vertical-align: middle;
 }
-
+.text-icons-middle{
+    vertical-align: middle;
+}
 
 
 //--------Block Golobal---------//
