--- a/src/app/modules/todo/components/form-todo/form-todo.component.html
+++ b/src/app/modules/todo/components/form-todo/form-todo.component.html
@@ -48,7 +48,8 @@
     <mat-dialog-actions align="end">
         <button mat-button type="button" (click)="cancel()">{{ 'cancel' | translate }}</button>
         <button mat-button type="submit" color="primary"> 
-            <span class="material-icons">done</span> {{ 'submit' | translate }}
+            <span class="material-icons">done</span> 
+            <span class="text-icons-middle"> {{ 'submit' | translate }} </span>
         </button>
     </mat-dialog-actions>
 </form>
