--- a/src/app/modules/todo/components/list-todo/list-todo.component.html
+++ b/src/app/modules/todo/components/list-todo/list-todo.component.html
@@ -3,7 +3,7 @@
         <span class="material-icons">filter_alt</span>
         <span class="text-icons-middle"> {{ 'filter' | translate }}</span>
     </h2>
-    <form class="pading" [formGroup]="searchForm" (ngSubmit)="submit()">
+    <form class="pading" [formGroup]="searchForm">
         <mat-grid-list cols="2" rowHeight="70px">
             <mat-grid-tile>
                 <mat-form-field class="input-big">
